==> WeActStudio/WeActStudio.EpaperModule/Example/EpaperModuleTest_AT32F403A/Epaper/epaper.c <==
#include "epaper.h"
#include "epdfont.h"
#include "delay.h"

void epd_res_set()
{
  gpio_bits_set(GPIOA, GPIO_PINS_8);
}

void epd_res_reset()
{
  gpio_bits_reset(GPIOA, GPIO_PINS_8);
}

void epd_dc_set()
{
  gpio_bits_set(GPIOB, GPIO_PINS_14);
}

void epd_dc_reset()
{
  gpio_bits_reset(GPIOB, GPIO_PINS_14);
}

void epd_cs_set()
{
  gpio_bits_set(GPIOB, GPIO_PINS_12);
}

void epd_cs_reset()
{
  gpio_bits_reset(GPIOB, GPIO_PINS_12);
}

uint8_t epd_is_busy()
{
  return gpio_input_data_bit_read(GPIOA, GPIO_PINS_9) == RESET ? 0 : 1;
}

void epd_write_reg(uint8_t reg)
{
  epd_dc_reset();
  epd_cs_reset();

  spi_i2s_data_transmit(SPI2, reg);
  while (spi_i2s_flag_get(SPI2, SPI_I2S_BF_FLAG) != RESET)
    ;

  epd_cs_set();
  epd_dc_set();
}

void epd_write_data(uint8_t data)
{
  epd_cs_reset();

  spi_i2s_data_transmit(SPI2, data);
  while (spi_i2s_flag_get(SPI2, SPI_I2S_BF_FLAG) != RESET)
    ;

  epd_cs_set();
}

void _epd_write_data(uint8_t data)
{
  while (spi_i2s_flag_get(SPI2, SPI_I2S_TDBE_FLAG) == RESET)
    ;
  spi_i2s_data_transmit(SPI2, data);
}

void _epd_write_data_over()
{
  while (spi_i2s_flag_get(SPI2, SPI_I2S_BF_FLAG) != RESET)
    ;
}

void epd_writedata(uint8_t *Image1, uint32_t length)
{
  epd_cs_reset();
  for (uint32_t j = 0; j < length; j++)
  {
    _epd_write_data(Image1[j]);
  }
  _epd_write_data_over();
  epd_cs_set();
}
